--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: home-page
 			<a href="{{post.url | prepend: site.baseurl}}" style="text-decoration: none; color: inherit;margin-right:20px;">{{ post.content | strip_html | strip_newlines | truncate: 100 }}</a>
 		</div>
         {% for tag in post.tags %}
-        <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">|&#32;{{ tag }}</a>
+        <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">{{ tag }}&#32;</a>
         {% endfor %}
 		
         <a href="{{post.url | prepend: site.baseurl}}" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
