--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="htmleaf-container">
 		
 		<div class="htmleaf-content bgcolor-8">
-			<img id="rplimg" src="img/rain.jpg" />
+			<img id="rplimg" src="img/rain11.jpg" />
 		</div>
 	
 	</div>
