--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 	<div class="htmleaf-container">
 		
-		<div class="htmleaf-content bgcolor-8">
-			<img id="rplimg" src="img/rain11.jpg" />
-		</div>
+		
+			<img id="rplimg" src="img/rain11.jpg" style="width:100%;height:100%;"/>
+		
 	
 	</div>
 	
