--- a/discuss.html
+++ b/discuss.html
@@ -27,12 +27,33 @@
           <a href="index.html">Leach Chen</a>
       </div>
 
-      <div class="box">
+
+    <div class="dropdownmenu">
+      <ul>
+        <li><a href="index.html">主页</a></li>
+        <li><a href="https://leach-chen.github.io/blog">博客</a></li>
+        <li><a href="#Github">GitHub例子</a></li>
+        <li><a href="#services">游戏</a></li>
+        <li><a href="#portfolio">网站模板</a>
+          <ul id="submenu">
+            <li><a href="#">H5模板</a></li>
+            <li><a href="#">PHP模板</a></li>
+            <li><a href="#">Jekyll模板</a></li>
+            <li><a href="#">Hexo模板</a></li>
+          </ul>
+        </li>
+        <li><a href="#team">图片</a></li>
+        <li><a href="#contact">工具</a></li>
+        <li><a href="discuss.html">留言 </a></li>
+      </ul>
+    </div>
+
+     <div class="box">
 
         <ul>
           <li><a href="index.html">主页</a></li>
           <li><a href="https://leach-chen.github.io/blog">博客</a></li>
-          <li><a href="discuss.html">GitHub</a></li>
+          <li><a href="#Github">GitHub</a></li>
           <li><a href="#services">游戏</a></li>
           <li><a href="#portfolio">网站模板</a></li>
           <li><a href="#team">图片</a></li>
@@ -53,6 +74,32 @@
             </div>
         </div>
     </div>
+
+    <section class="overlay-menu">
+      <div class="container">
+        <div class="row">
+          <div class="main-menu">
+
+              <ul>
+                <ul>
+                  <li><a href="index.html">主页</a></li>
+                  <li><a href="https://leach-chen.github.io/blog">博客</a></li>
+                  <li><a href="#Github">GitHub例子</a></li>
+                  <li><a href="#services">游戏</a></li>
+                  <li><a href="#">H5网站模板</a></li>
+                  <li><a href="#">PHP网站模板</a></li>
+                  <li><a href="#">Jekyll网站模板</a></li>
+                  <li><a href="#">Hexo网站模板</a></li>
+                  <li><a href="#team">图片</a></li>
+                  <li><a href="#contact">工具</a></li>
+                  <li><a href="discuss.html">留言 </a></li>
+                </ul>
+              </ul>
+
+          </div>
+        </div>
+      </div>
+    </section>
 
 
     <section class="comment-area">
