--- a/discuss.html
+++ b/discuss.html
@@ -42,6 +42,7 @@
             <li><a href="#">Hexo模板</a></li>
           </ul>
         </li>
+        <li><a href="#portfolio">H5特效</a>
         <li><a href="#team">图片</a></li>
         <li><a href="#contact">工具</a></li>
         <li><a href="discuss.html">留言 </a></li>
@@ -56,6 +57,7 @@
           <li><a href="#Github">GitHub</a></li>
           <li><a href="#services">游戏</a></li>
           <li><a href="#portfolio">网站模板</a></li>
+          <li><a href="#portfolio">H5特效</a>
           <li><a href="#team">图片</a></li>
           <li><a href="#contact">工具</a></li>
           <li><a href="discuss.html">留言 </a></li>
@@ -90,6 +92,7 @@
                   <li><a href="#">PHP网站模板</a></li>
                   <li><a href="#">Jekyll网站模板</a></li>
                   <li><a href="#">Hexo网站模板</a></li>
+                  <li><a href="#portfolio">H5特效</a>
                   <li><a href="#team">图片</a></li>
                   <li><a href="#contact">工具</a></li>
                   <li><a href="discuss.html">留言 </a></li>
