--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <li><a href="#">Hexo模板</a></li>
             </ul>
           </li>
+          <li><a href="#portfolio">H5特效</a>
           <li><a href="#team">图片</a></li>
           <li><a href="#contact">工具</a></li>
           <li><a href="discuss.html">留言 </a></li>
@@ -62,6 +63,7 @@
             <li><a href="#Github">GitHub</a></li>
             <li><a href="#services">游戏</a></li>
             <li><a href="#portfolio">网站模板</a></li>
+            <li><a href="#portfolio">H5特效</a>
             <li><a href="#team">图片</a></li>
             <li><a href="#contact">工具</a></li>
             <li><a href="discuss.html">留言 </a></li>
@@ -324,6 +326,7 @@
                   <li><a href="#">PHP网站模板</a></li>
                   <li><a href="#">Jekyll网站模板</a></li>
                   <li><a href="#">Hexo网站模板</a></li>
+                  <li><a href="#portfolio">H5特效</a>
                   <li><a href="#team">图片</a></li>
                   <li><a href="#contact">工具</a></li>
                   <li><a href="discuss.html">留言 </a></li>
