--- a/open.html
+++ b/open.html
@@ -4,7 +4,7 @@
 <style type="text/css">
     html{overflow:hidden;}
 </style>
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script>
 
 $(document).ready(function(){
