--- a/open.html
+++ b/open.html
@@ -21,9 +21,9 @@ function getUrl() {
 } 
 </script>
 </head>
-<body>
+<body style="margin:0px;padding:0px;">
 
-<iframe id="pagecontent"  style="width:100%;height:100%;overflow: hidden; border:none;scrolling:auto"></iframe>
+<iframe id="pagecontent"  style="width:100%;height:100%;overflow: hidden; border:none;scrolling:auto;margin:0px;padding:0px;"></iframe>
 
 </div>
 </body>
