--- a/open.html
+++ b/open.html
@@ -1,5 +1,7 @@
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <style type="text/css">
     html{overflow:hidden;}
