--- a/open.html
+++ b/open.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
