--- a/open.html
+++ b/open.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html>
   <head>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta charset="utf-8">
